api-gateway/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 8001 }

static_resources:
  listeners:
    - name: listener1
      address:
        socket_address: { address: 0.0.0.0, port_value: 8049 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
                route_config:
                  name: venus_wall_route
                  virtual_hosts:
                    - name: venus_wall
                      domains: ["*"]
                      # retry_policy:
                      #   retry_on: 5xx
                      #   num_retries: 10
                      #   per_try_timeout: 10s
                      #   retry_back_off:
                      #     base_interval: 0.3s
                      cors:
                        allow_origin_string_match:
                          - safe_regex:
                              google_re2: {}
                              regex: \*
                        allow_methods: "GET, POST, PUT, DELETE, PATCH"
                        allow_headers: "authorization, content-type, x-requestid, x-requested-with"
                        allow_credentials: true
                      routes:
                        - match: { prefix: "/api-service/" }
                          route:
                            {
                              auto_host_rewrite: true,
                              prefix_rewrite: "/v1.0/invoke/api-service/method/",
                              cluster: dapr,
                            }

                        - match: { prefix: "/" }
                          route:
                            {
                              auto_host_rewrite: true,
                              prefix_rewrite: "/v1.0/invoke/web-site/method/",
                              cluster: dapr,
                            }                      

  clusters:
    - name: dapr
      connect_timeout: 60s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: dapr
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 3500
      # Respond with 503 if connection parameters exceed the threshold
      # circuit_breakers:
      #   thresholds:
      #     max_connections: 1
      #     max_pending_requests: 1
      #     max_retries: 3
      #     track_remaining: true
      # # Eject a host out of the cluster if there are too many consecutive 5xx
      # outlier_detection:
      #   consecutive_5xx: 10
      #   # Eject until the cluster is empty
      #   max_ejection_percent: 100
      #   base_ejection_time: 60s
